assets/css/style.css
.background {
 background-image: url(../images/background.jpg);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#map {
    margin-top: 50px;
    margin-bottom: 20px;
    width: 100%;
    height: 100px;
    background: transparent;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
}

/* Style the tab */
.tab {
  overflow: hidden;
  border: 1px solid #ccc;
  background-color: #4e4e4e;
}

/* Style the buttons that are used to open the tab content */
.tab button {
  background-color: #555;
  color: white;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  font-size: 17px;
  width: 33%;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: rgb(138, 138, 138);
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: rgb(143, 143, 143);
}

/* Style the tab content */
.tabcontent {
  display: none;
  padding: 6px 12px;
  border: 1px solid #ccc;
  border-top: none;
}

